--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,22 @@ colorama==0.4.4
 coverage==5.3.1
 Django==2.2.6
 django-debug-toolbar==2.2
+django-filter==2.4.0
+djangorestframework==3.12.2
+djangorestframework-simplejwt==4.6.0
+flake8==3.8.4
 idna==2.8
 importlib-metadata==1.5.0
 isort==5.6.4
+mccabe==0.6.1
 more-itertools==8.2.0
 packaging==20.1
 Pillow==8.1.0
 pluggy==0.13.1
 py==1.8.1
 pycodestyle==2.6.0
+pyflakes==2.2.0
+PyJWT==2.0.1
 pyparsing==2.4.6
 pytest==5.3.5
 pytest-django==3.8.0
